[package]
name = "death-rs"
version = "0.1.0"
authors = ["grindlemire <grindlemire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
signal-hook = "0.2.1"
uuid = {version = "0.8.1", features = ["v4"]}

[dev-dependencies]
rand = "0.7.3"
simple_logger = "1.11.0"
log = "0.4.11"
