[package]
name = "death-rs"
version = "0.1.0"
authors = ["grindlemire <grindlemire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
signal-hook = "0.2.1"
thiserror = "1.0.22"

[dev-dependencies]
rand = "0.7.3"
simple_logger = "1.11.0"
log = "0.4.11"
libc = "0.2.81"
